force-app/main/default/objects/CTRActorInProcess__mdt.object
<CustomObject>
    <fields>
        <fullName>ActorPosition__c</fullName>
        <label>ActorPosition</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActorTeam__c</fullName>
        <label>Actor Team</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeId__c</fullName>
        <label>EmployeeId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InterByTX__c</fullName>
        <label>InterByTX</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <label>Process</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NewAccount</fullName>
                </value>
                <value>
                    <fullName>SubmitRegistration</fullName>
                </value>
                <value>
                    <fullName>TraderSheet</fullName>
                </value>
                <value>
                    <fullName>VerifyDocuments</fullName>
                </value>
                <value>
                    <fullName>InformChangeInformation</fullName>
                </value>
                <value>
                    <fullName>CheckDueDiligence</fullName>
                </value>
                <value>
                    <fullName>DueDiligence</fullName>
                </value>
                <value>
                    <fullName>ApprovalDetail</fullName>
                </value>
                <value>
                    <fullName>CommitteeSelection</fullName>
                </value>
                <value>
                    <fullName>SummaryReport</fullName>
                </value>
                <value>
                    <fullName>SAPInformation</fullName>
                </value>
                <value>
                    <fullName>InformRelated</fullName>
                </value>
                <value>
                    <fullName>InformRelatedCC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Crude</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <label>RecordType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                    <default>true</default>
                    <label>Customer</label>
                </value>
                <value>
                    <fullName>Supplier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesOrg__c</fullName>
        <label>SalesOrg</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TOP</fullName>
                    <default>true</default>
                    <label>TOP</label>
                </value>
                <value>
                    <fullName>TPX</fullName>
                </value>
                <value>
                    <fullName>TLB</fullName>
                </value>
                <value>
                    <fullName>LABIX</fullName>
                </value>
                <value>
                    <fullName>JSKem</fullName>
                </value>
                <value>
                    <fullName>TSR</fullName>
                </value>
                <value>
                    <fullName>TSV</fullName>
                </value>
                <value>
                    <fullName>TXTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Step__c</fullName>
        <label>Step</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Trader</fullName>
                    <default>true</default>
                    <label>Trader</label>
                </value>
                <value>
                    <fullName>TraderHead</fullName>
                </value>
                <value>
                    <fullName>CMVP</fullName>
                </value>
                <value>
                    <fullName>TRCR</fullName>
                </value>
                <value>
                    <fullName>TRCRHead</fullName>
                </value>
                <value>
                    <fullName>CPCE</fullName>
                </value>
                <value>
                    <fullName>EDDTeam</fullName>
                </value>
                <value>
                    <fullName>GLGC</fullName>
                </value>
                <value>
                    <fullName>EVPC</fullName>
                </value>
                <value>
                    <fullName>AMM</fullName>
                </value>
                <value>
                    <fullName>CEO</fullName>
                </value>
                <value>
                    <fullName>Committee</fullName>
                </value>
                <value>
                    <fullName>FALB</fullName>
                </value>
                <value>
                    <fullName>FALBHead</fullName>
                </value>
                <value>
                    <fullName>LABIXMD</fullName>
                </value>
                <value>
                    <fullName>SA09</fullName>
                </value>
                <value>
                    <fullName>FATX</fullName>
                </value>
                <value>
                    <fullName>FATXHead</fullName>
                </value>
                <value>
                    <fullName>TXMD</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>CreditHead</fullName>
                </value>
                <value>
                    <fullName>VP</fullName>
                </value>
                <value>
                    <fullName>TXMO</fullName>
                </value>
                <value>
                    <fullName>TXMOHead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic</fullName>
                    <default>true</default>
                    <label>Domestic</label>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CTRActorInProcess</label>
    <listViews>
        <fullName>View_All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>ActorPosition__c</columns>
        <columns>ActorTeam__c</columns>
        <columns>EmployeeId__c</columns>
        <columns>InterByTX__c</columns>
        <columns>Process__c</columns>
        <columns>Product__c</columns>
        <columns>RecordType__c</columns>
        <columns>SalesOrg__c</columns>
        <columns>Step__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>View All</label>
    </listViews>
</CustomObject>